[package]
name = "nannou-sketches"
version = "0.1.0"
authors = ["Guido Schmidt <git@guidoschmidt.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.15.0"

[[bin]]
name = "first_sketch"
path = "src/main.rs"